# recommendation-system

./: README.md  pyproject.toml  requirements.txt
app/: api.py  cache.py  config.py  data_loader.py  feature_engineering.py  preprocessing.py  recommender.py
data/: interactions.csv  products.csv  users.csv
scripts/: sync_data.py
